--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Permanent+Marker|Playfair+Display:900|Open+Sans');
 
 body {
+    <link rel="stylesheet" href="style.css">
     background: #e9e9e9;
     background-image: url('background.jpg');
     background-size: cover;
